Correção do modelo de autenticação dos endpoints e lógica dos repositórios, além da inclusão do middleware de autenticação.Update appsettings.json
