# src/Controllers/PlaylistController.cs
@@ -1,22 +1,22 @@
 using System.Security.Claims;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
+using MisticFy.DTO;
 using MisticFy.Models;
 using MisticFy.Repositories;
-using MisticFy.Services;
 
 namespace MisticFy.src.Controllers
 {
     [Route("[controller]")]
     [ApiController]
-    public class PlaylistController(IPlaylistRepository playlist, IUserService _userService) : ControllerBase
+    public class PlaylistController(IPlaylistRepository playlist) : ControllerBase
     {
 
         private readonly IPlaylistRepository _playlist = playlist;
 
         [HttpGet("userPlaylist")]
         [Authorize]
-        public async Task<ActionResult> GetPlaylistAsyc(string userPlaylist)
+        public async Task<ActionResult<SpotifyPlaylistDetailsDTO>> GetPlaylistAsync(string userPlaylist)
         {
             var playlist = await _playlist.GetUserPlaylistAsync(userPlaylist);
 
@@ -25,7 +25,7 @@ namespace MisticFy.src.Controllers
 
         [HttpPut("AddSongToPlaylist")]
         [Authorize]
-        public async Task<ActionResult<Playlist>> UpdatePlaylist([FromBody] List<string> uris, string playlistId)
+        public async Task<ActionResult<SpotifyPlaylistDTO>> UpdatePlaylistAsync([FromBody] List<string> uris, string playlistId)
         {
             var playlist = await _playlist.AddSongToPlaylist(uris, playlistId);
 
@@ -34,7 +34,7 @@ namespace MisticFy.src.Controllers
 
         [HttpPost("CreatePlaylist")]
         [Authorize]
-        public async Task<ActionResult> CreatePlaylistAsync([FromBody] Playlist playlist)
+        public async Task<ActionResult<SpotifyPlaylistDTO>> CreatePlaylistAsync([FromBody] Playlist playlist)
         {
             var userPlaylist = await _playlist.CreatePlaylistAsync(playlist);
 
